Add Python package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,2 @@
-[package]
-name = "chord-chart"
-version = "0.1.0"
-edition = "2021"
-
-[dev-dependencies]
-test-case = "2.2.1"
+[workspace]
+members = ["chord-chart", "chord-chart-py"]
