--- a/.github/workflows/test-rust.yml
+++ b/.github/workflows/test-rust.yml
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: rustup update stable && rustup default stable
       - uses: Swatinem/rust-cache@v2
-      - run: cargo build --verbose
-      - run: cargo test --verbose
+      - run: cargo build
+      - run: cargo test
