--- a/chord-chart-ts/Cargo.toml
+++ b/chord-chart-ts/Cargo.toml
@@ -7,12 +7,11 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [features]
-default = ["console_error_panic_hook", "wee_alloc"]
+default = ["wee_alloc"]
 
 [dependencies]
 chord-chart = { path = "../chord-chart" }
 wasm-bindgen = "0.2.74"
-console_error_panic_hook = { version = "0.1.7", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 
 [profile.release]
