--- a/chord-chart-ts/Cargo.toml
+++ b/chord-chart-ts/Cargo.toml
@@ -6,13 +6,10 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
-[features]
-default = ["wee_alloc"]
-
 [dependencies]
 chord-chart = { path = "../chord-chart" }
 wasm-bindgen = "0.2.74"
-wee_alloc = { version = "0.4.5", optional = true }
+wee_alloc = "0.4.5"
 
 [profile.release]
 lto = true
