--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -30,5 +30,5 @@ jobs:
           key: py-${{ hashFiles('chord-chart-py/pyproject.toml') }}
       - run: rustup update stable && rustup default stable
       - uses: Swatinem/rust-cache@v2
-      - run: make install-py
-      - run: make test-py
+      - run: cd chord-chart-py && make install
+      - run: cd chord-chart-py && make test
