--- a/chord-chart-py/pyproject.toml
+++ b/chord-chart-py/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "chord-chart"
+version = "0"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
@@ -11,3 +12,6 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 optional-dependencies = { test = ["pytest"] }
+
+[tool.isort]
+profile = "black"
