--- a/chord-chart-py/Makefile
+++ b/chord-chart-py/Makefile
@@ -3,11 +3,8 @@
 install:
 	python3.11 -m venv .venv
 	.venv/bin/pip install maturin
-	.venv/bin/pip install -e .[test,pyright]
+	.venv/bin/pip install -e .[test,lint]
 
 test:
 	VIRTUAL_ENV=.venv .venv/bin/maturin develop
 	.venv/bin/pytest --color=yes
-
-pyright:
-	.venv/bin/pyright
