--- a/chord-chart-py/pyproject.toml
+++ b/chord-chart-py/pyproject.toml
@@ -11,7 +11,13 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
-optional-dependencies = { test = ["pytest"] }
+
+[project.optional-dependencies]
+test = ["pytest==7.2.0"]
+lint = [
+    "pre-commit==2.20.0",
+    "pyright==1.1.280",
+]
 
 [tool.isort]
 profile = "black"
