--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -34,4 +37,5 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - run: cd chord-chart-py && make install
       - run: cd chord-chart-js && npm ci
+      - run: cd chord-chart-js && npm run build
       - run: chord-chart-py/.venv/bin/pre-commit run --color=always --all-files
