--- a/chord-chart-js/package.json
+++ b/chord-chart-js/package.json
@@ -17,11 +17,12 @@
     }
   },
   "devDependencies": {
+    "prettier": "2.7.1",
+    "tsup": "6.5.0",
     "typescript": "4.9.3",
     "vite": "3.2.4",
     "vitest": "0.25.1",
-    "wasm-pack": "0.10.3",
-    "tsup": "6.5.0"
+    "wasm-pack": "0.10.3"
   },
   "scripts": {
     "clean": "rm -rf dist pkg",
@@ -30,6 +31,5 @@
     "build:types": "tsup index.ts --dts-only",
     "build": "npm run clean && npm run build:wasm && npm run build:package && npm run build:types",
     "test": "npm run build && vitest --run"
-  },
-  "dependencies": {}
+  }
 }
