--- a/.github/workflows/test-rust.yml
+++ b/.github/workflows/test-rust.yml
@@ -19,12 +19,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: chord-chart
     steps:
       - uses: actions/checkout@v3
       - run: rustup update stable && rustup default stable
       - uses: Swatinem/rust-cache@v2
       - run: cargo build
+      - run: cargo clippy
       - run: cargo test
