--- a/chord-chart-py/Makefile
+++ b/chord-chart-py/Makefile
@@ -3,8 +3,11 @@
 install:
 	python3.11 -m venv .venv
 	.venv/bin/pip install maturin
-	.venv/bin/pip install -e .[test,lint]
+	.venv/bin/pip install -e .[test]
 
 test:
 	VIRTUAL_ENV=.venv .venv/bin/maturin develop
 	.venv/bin/pytest --color=yes
+
+check-types:
+	.venv/bin/pyright
