--- a/.github/workflows/test-js.yml
+++ b/.github/workflows/test-js.yml
@@ -16,17 +16,23 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+defaults:
+  run:
+    working-directory: chord-chart-js
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: rustup update stable && rustup default stable
+      - uses: Swatinem/rust-cache@v2
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: "npm"
+          cache: npm
           cache-dependency-path: chord-chart-js/package-lock.json
-      - run: rustup update stable && rustup default stable
-      - uses: Swatinem/rust-cache@v2
-      - run: cd chord-chart-js && npm ci
-      - run: cd chord-chart-js && npm test
+      - run: npm ci
+      - run: npm run build
+      - run: npm run check-types
+      - run: npm test
