--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -16,19 +16,24 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+defaults:
+  run:
+    working-directory: chord-chart-py
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: rustup update stable && rustup default stable
+      - uses: Swatinem/rust-cache@v2
       - uses: actions/setup-python@v4
         with:
           python-version: 3.11
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: py-${{ hashFiles('chord-chart-py/pyproject.toml') }}
-      - run: rustup update stable && rustup default stable
-      - uses: Swatinem/rust-cache@v2
-      - run: cd chord-chart-py && make install
-      - run: cd chord-chart-py && make test
+          key: ${{ hashFiles('chord-chart-py/pyproject.toml') }}
+      - run: make install
+      - run: make check-types
+      - run: make test
