--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,4 @@
 repos:
-  - repo: local
-    hooks:
-      - id: pyright
-        name: pyright
-        language: system
-        types_or: [python, pyi, pyproj]
-        pass_filenames: false
-        entry: ./chord-chart-py/.venv/bin/pyright
-
-      - id: tsc
-        name: tsc
-        language: system
-        types_or: [javascript, ts]
-        pass_filenames: false
-        entry: ./chord-chart-js/node_modules/.bin/tsc -p chord-chart-js/tsconfig.json --noEmit
-
-      - id: clippy
-        name: clippy
-        language: system
-        types: [rust]
-        pass_filenames: false
-        entry: cargo clippy
-
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
@@ -47,15 +24,14 @@ repos:
 
   - repo: local
     hooks:
-      - id: prettier
-        name: prettier
-        language: system
-        types_or: [javascript, ts, json, yaml]
-        entry: ./chord-chart-js/node_modules/.bin/prettier --write --list-different --ignore-unknown
-
       - id: rustfmt
         name: rustfmt
         language: system
         types: [rust]
         pass_filenames: false
         entry: cargo fmt
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
+    hooks:
+      - id: prettier
