--- a/chord-chart-js/package.json
+++ b/chord-chart-js/package.json
@@ -17,7 +17,6 @@
     }
   },
   "devDependencies": {
-    "prettier": "2.7.1",
     "tsup": "6.5.0",
     "typescript": "4.9.3",
     "vite": "3.2.4",
@@ -30,6 +29,8 @@
     "build:package": "vite build",
     "build:types": "tsup index.ts --dts-only",
     "build": "npm run clean && npm run build:wasm && npm run build:package && npm run build:types",
-    "test": "npm run build && vitest --run"
+    "test": "vitest --run",
+    "build-test": "npm run build && npm run test",
+    "check-types": "tsc --noEmit"
   }
 }
