--- a/chord-chart-py/pyproject.toml
+++ b/chord-chart-py/pyproject.toml
@@ -13,11 +13,7 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-test = ["pytest==7.2.0"]
-lint = [
-    "pre-commit==2.20.0",
-    "pyright==1.1.280",
-]
+test = ["pytest==7.2.0", "pyright==1.1.280"]
 
 [tool.isort]
 profile = "black"
