--- a/chord-chart-py/Cargo.toml
+++ b/chord-chart-py/Cargo.toml
@@ -12,4 +12,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 chord-chart = { path = "../chord-chart" }
-pyo3 = { version = "0.17.1", features = ["extension-module"] }
+pyo3 = { version = "=0.17.1", features = ["extension-module"] }
