--- a/chord-chart-py/pyproject.toml
+++ b/chord-chart-py/pyproject.toml
@@ -8,7 +8,7 @@ requires-python = ">=3.7"
 description = "Chord chart validation and transposition"
 readme = "README.md"
 authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
-license = { file = "../LICENSE" }
+license = { text = "MIT" }
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
