--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,27 @@
-name: Publish Python
+name: Release
 
 on:
+  push:
+    tags:
+      - py-v*
   workflow_dispatch:
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
+  check-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      - run: python .github/check-version.py
+
   linux:
     runs-on: ubuntu-latest
+    needs: check-version
     steps:
       - uses: actions/checkout@v3
       - uses: PyO3/maturin-action@v1
@@ -13,52 +29,70 @@ jobs:
           manylinux: auto
           command: build
           args: --release --sdist -o dist --find-interpreter -m chord-chart-py/Cargo.toml
-      - name: Upload wheels
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
           name: wheels
           path: dist
 
   windows:
     runs-on: windows-latest
+    needs: check-version
     steps:
       - uses: actions/checkout@v3
       - uses: PyO3/maturin-action@v1
         with:
           command: build
           args: --release -o dist --find-interpreter -m chord-chart-py/Cargo.toml
-      - name: Upload wheels
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
           name: wheels
           path: dist
 
   macos:
     runs-on: macos-latest
+    needs: check-version
     steps:
       - uses: actions/checkout@v3
       - uses: PyO3/maturin-action@v1
         with:
           command: build
           args: --release -o dist --universal2 --find-interpreter -m chord-chart-py/Cargo.toml
-      - name: Upload wheels
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
           name: wheels
           path: dist
 
-  release:
-    name: Release
+  release-py:
     runs-on: ubuntu-latest
     needs: [macos, windows, linux]
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: wheels
-      - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
+      - uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           command: upload
           args: --skip-existing *
+
+  release-js:
+    runs-on: ubuntu-latest
+    needs: check-version
+    defaults:
+      run:
+        working-directory: chord-chart-js
+    steps:
+      - uses: actions/checkout@v3
+      - run: rustup update stable && rustup default stable
+      - uses: Swatinem/rust-cache@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+          cache-dependency-path: chord-chart-js/package-lock.json
+      - run: npm ci
+      - run: npm run build
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
