--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ hashFiles('chord-chart-py/pyproject.toml') }}
+          key: test-${{ matrix-version}}-${{ hashFiles('chord-chart-py/pyproject.toml') }}
       - run: make install
       - run: make check-types
       - run: make test
