--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -54,6 +54,6 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: test-${{ matrix-version}}-${{ hashFiles('chord-chart-py/pyproject.toml') }}
+          key: test-${{ matrix.version}}-${{ hashFiles('chord-chart-py/pyproject.toml') }}
       - run: make install
       - run: make test
