--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -42,18 +42,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version:
-          ["3.7", "3.8", "3.9", "3.10", "3.11", "pypy3.7", "pypy3.8", "pypy3.9"]
+        version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
       - run: rustup update stable && rustup default stable
-      # - uses: Swatinem/rust-cache@v2
+      - uses: Swatinem/rust-cache@v2
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.version }}
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: test-${{ matrix.version}}-${{ hashFiles('chord-chart-py/pyproject.toml') }}
+          key: test-${{ matrix.version }}-${{ hashFiles('chord-chart-py/pyproject.toml') }}
       - run: make install
       - run: make test
