--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
@@ -21,5 +19,5 @@ jobs:
         with:
           path: ~/.cache/pre-commit
           key: ${{ hashFiles('.pre-commit-config.yaml') }}
-      - run: pip install pre-commit
+      - run: pip install -U pre-commit
       - run: pre-commit run --color=always --all-files
